--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-validation": "^4.1.0",
+    "firebase": "^10.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.6.6",
