--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express-fileupload": "^1.4.3",
     "express-validation": "^4.1.0",
     "firebase": "^10.7.0",
+    "firebase-admin": "^12.0.0",
+    "formidable-serverless": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.6.6",
